# CppWebScraper

./: CMakeLists.txt  README.md
include/: request.hpp
lib/curl-8.20.0_5-win64-mingw/: BUILD-HASHES.txt  BUILD-MANIFEST.txt
lib/curl-8.20.0_5-win64-mingw/dep/nghttp3/: ChangeLog.txt
lib/curl-8.20.0_5-win64-mingw/dep/ngtcp2/: ChangeLog.txt
receive/: receive.json  receive.txt
src/: main.cpp  request.cpp
